--- a/.github/workflows/deployToHeroku.yml
+++ b/.github/workflows/deployToHeroku.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: '14'
       - name: Build Frontend
         run: |
-          cd frontend
+          cd web-frontend
           npm install
           npm run build
       - uses: actions/upload-artifact@v2
