--- a/.github/workflows/deployToHeroku.yml
+++ b/.github/workflows/deployToHeroku.yml
@@ -20,12 +20,12 @@ jobs:
           npm run build
       - uses: actions/upload-artifact@v2
         with:
-          name: frontend-build
-          path: frontend/build/
+          name: web-frontend-build
+          path: web-frontend/build/
 
   build-backend:
     runs-on: ubuntu-latest
-    needs: build-frontend
+    needs: web-build-frontend
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
@@ -34,7 +34,7 @@ jobs:
           distribution: 'adopt'
       - uses: actions/download-artifact@v2
         with:
-          name: frontend-build
+          name: web-frontend-build
           path: backend/src/main/resources/static
       - name: Build with maven
         run: mvn -B package --file backend/pom.xml
