--- a/.github/workflows/deployToHeroku.yml
+++ b/.github/workflows/deployToHeroku.yml
@@ -25,7 +25,7 @@ jobs:
 
   build-backend:
     runs-on: ubuntu-latest
-    needs: web-build-frontend
+    needs: build-frontend
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
