Add sonarcube and test reports from sonarcube to get checks and reports on Github.

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+spring.data.mongodb.database=biokisteTestDB
 # Not using latest:
 # https://github.com/flapdoodle-oss/de.flapdoodle.embed.mongo/issues/383
 spring.mongodb.embedded.version=3.5.5
