Add authenticated user with login in backend. Test is green. However, local test by hand give 500 in this case.

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -3,4 +3,4 @@ spring.data.mongodb.database=biokisteTestDB
 # https://github.com/flapdoodle-oss/de.flapdoodle.embed.mongo/issues/383
 spring.mongodb.embedded.version=3.5.5
 
-piphi.biokisteapp.jwt.secret=verygeheimsecret
+piphi.biokisteapp.jwt.secret=supergeheimestestsecret
