--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.4",
     "axios": "^0.27.2",
     "crypto-browserify": "^3.12.0",
+    "jose": "^4.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
