Simple mail sending with fixed parameters in test works.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.data.mongodb.uri=${MONGO_DB_URI}
 
 piphi.biokisteapp.jwt.secret=supergeheim
+
+spring.mail.host=pro.turbo-smtp.com
+spring.mail.port=465
+spring.mail.username=earl_of_oelde@web.de
+spring.mail.password=asBZcv9d
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
