--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -4,3 +4,16 @@ spring.data.mongodb.database=biokisteTestDB
 spring.mongodb.embedded.version=3.5.5
 
 piphi.biokisteapp.jwt.secret=supergeheimestestsecret
+
+spring.mail.host=pro.turbo-smtp.com
+spring.mail.port=587
+spring.mail.username=earl_of_oelde@web.de
+spring.mail.password=asBZcv9d
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
