Sending emails works now.

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -7,13 +7,13 @@ piphi.biokisteapp.jwt.secret=supergeheimestestsecret
 
 spring.mail.host=pro.turbo-smtp.com
 spring.mail.port=587
-spring.mail.username=earl_of_oelde@web.de
-spring.mail.password=asBZcv9d
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASS}
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.connectiontimeout=200000
+spring.mail.properties.mail.smtp.timeout=200000
+spring.mail.properties.mail.smtp.writetimeout=200000
 
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
