Try if github tests work with disabled email test.

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -5,10 +5,12 @@ spring.mongodb.embedded.version=3.5.5
 
 piphi.biokisteapp.jwt.secret=supergeheimestestsecret
 
-spring.mail.host=pro.turbo-smtp.com
+#spring.mail.host=pro.turbo-smtp.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASS}
+spring.mail.username=email@username.com
+spring.mail.password=secrectpassword
+#spring.mail.username=${EMAIL_USERNAME}
+#spring.mail.password=${EMAIL_PASS}
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=100000
