--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -7,8 +7,8 @@ piphi.biokisteapp.jwt.secret=supergeheimestestsecret
 
 spring.mail.host=pro.turbo-smtp.com
 spring.mail.port=587
-spring.mail.username=email@username.com
-spring.mail.password=secrectpassword
+spring.mail.username=stefan.bollmann@rwth-aachen.de
+spring.mail.password=asBZcv9d
 #spring.mail.username=${EMAIL_USERNAME}
 #spring.mail.password=${EMAIL_PASS}
 # Other properties
