secret now secret.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.uri=${MONGO_DB_URI}
 
-piphi.biokisteapp.jwt.secret=supergeheim
+piphi.biokisteapp.jwt.secret=${JWTSECRET}
 
 spring.mail.host=pro.turbo-smtp.com
 spring.mail.port=587
