Put mail username and password in environment variables also for test. Password was changed (someone send some mail using my account... :/ )

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -7,10 +7,8 @@ piphi.biokisteapp.jwt.secret=supergeheimestestsecret
 
 spring.mail.host=pro.turbo-smtp.com
 spring.mail.port=587
-spring.mail.username=stefan.bollmann@rwth-aachen.de
-spring.mail.password=asBZcv9d
-#spring.mail.username=${EMAIL_USERNAME}
-#spring.mail.password=${EMAIL_PASS}
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASS}
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=100000
