--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.mail.username=${EMAIL_USERNAME}
 spring.mail.password=${EMAIL_PASS}
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=100000
-spring.mail.properties.mail.smtp.timeout=100000
-spring.mail.properties.mail.smtp.writetimeout=100000
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
