--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,4 +16,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
+      env:
+        EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME}}
+        EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
       run: mvn -B package --file backend/pom.xml
