--- a/.github/workflows/sonar-backend.yml
+++ b/.github/workflows/sonar-backend.yml
@@ -35,4 +35,5 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME}}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
+          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=boltzmann_biokiste_backend --file backend/pom.xml
