--- a/.github/workflows/deployToHeroku.yml
+++ b/.github/workflows/deployToHeroku.yml
@@ -40,6 +40,7 @@ jobs:
         env:
           EMAIL_USERNAME: ${{ secrets.EMAIL_USERNAME}}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
+          SMTP_SERVER:  ${{ secrets.SMTP_SERVER }}
         run: mvn -B package --file backend/pom.xml
       - uses: actions/upload-artifact@v2
         with:
