--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.data.mongodb.uri=${MONGO_DB_URI}
 
 piphi.biokisteapp.jwt.secret=${JWTSECRET}
 
-spring.mail.host=pro.turbo-smtp.com
+#spring.mail.host=pro.turbo-smtp.com
+spring.mail.host=${SMTP_SERVER}
 spring.mail.port=587
 spring.mail.username=${EMAIL_USERNAME}
 spring.mail.password=${EMAIL_PASS}
