--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -5,7 +5,7 @@ spring.mongodb.embedded.version=3.5.5
 
 piphi.biokisteapp.jwt.secret=supergeheimestestsecret
 
-spring.mail.host=pro.turbo-smtp.com
+spring.mail.host=${SMTP_SERVER}
 spring.mail.port=587
 spring.mail.username=${EMAIL_USERNAME}
 spring.mail.password=${EMAIL_PASS}
